fixed alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,7 @@
 #home-button:active {
   outline: none;
 }
+
+canvas {
+    display: block;
+}
